# Deepfake-detection

./: .gitignore  README.md  SETUP.md  paths.example.yaml  pyproject.toml  requirements-dev.txt  requirements-preprocess.txt  requirements.txt  verify_env.py
.github/workflows/: ci.yml
configs/: base.yaml
configs/data/: celebdf_v2.yaml  df40_diffusion.yaml  dfdc.yaml  faceforensics_c23.yaml  wilddeepfake.yaml
configs/model/: frequency_only.yaml  full.yaml  full_freqforced.yaml  fusion_multistage.yaml  spatial_only.yaml
docs/: DATASETS.md
experiments/: README.md
scripts/: download_df40.sh  emit_table.py  evaluate.py  preprocess_faces.py  run_e5.py  train.py  verify_dataloaders.py
src/sfdet/: __init__.py
src/sfdet/data/: __init__.py  dataset.py
src/sfdet/engine/: __init__.py  evaluator.py  losses.py  trainer.py
src/sfdet/explain/: __init__.py  explainability.py  visualize.py
src/sfdet/metrics/: __init__.py  classification.py  report.py
src/sfdet/models/: __init__.py  factory.py  frequency_branch.py  fusion.py  model.py  spatial_branch.py
src/sfdet/models/baselines/: __init__.py
src/sfdet/preprocess/: __init__.py  extract_faces.py  manifest.py
src/sfdet/utils/: __init__.py
tests/: __init__.py  conftest.py  test_dataset_logic.py  test_dataset_numeric.py  test_manifest.py  test_prefusion_hook.py
